Fix nav bar jump when scrolling

--- a/sass/partials/_navigation.scss
+++ b/sass/partials/_navigation.scss
@@ -6,7 +6,6 @@ body > nav {
     top: 1px solid $nav-border-top;
     bottom: 1px solid $nav-border-bottom; }
   padding-top: .35em;
-  padding-bottom: .35em;
   form {
     @include background-clip(padding-box);
     margin: 0; padding: 0;
@@ -139,5 +138,8 @@ body > nav {
   ul.subscription { position: relative; top: .2em; li, a { border: 0; padding: 0; }}
   a[rel=subscribe-rss]{ @include mask-subscription-nav('rss.png'); }
   a[rel=subscribe-email]{ @include mask-subscription-nav('email.png'); }
+}
+#nav-placeholder {
+  display: none;
 }
 
